--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Pagina Sitio Pet v2 </title>
+  <link rel="icon" href="assets/icons/logositiopetv2.png  " type="image/x-icon">
 
 
   <!-- Bootstrap Icons -->
@@ -65,7 +66,7 @@
       <div class="topbar-section phone">
         <a href="#" class="topbar-link">
 
-          <i class="bi bi-telephone-fill" style="color: #28a745;"></i> <span>+56 9 97008609</span>
+          <i class="bi bi-telephone-fill" style="color: #28a745;"></i> <span>+56 9 23878557</span>
 
         </a>
       </div>
@@ -91,11 +92,6 @@
   <header class="header reveal-up">
     <div class="container">
       <div class="navbar">
-
-
-
-
-
         <div class="logo">
           <img src="assets/icons/logositiopetv2.png" alt="Logo" class="logo-icon" />
           <span class="logo-text">
@@ -143,7 +139,6 @@
             Alimentos de la más alta calidad para mantener a tus compañeros
             felices y saludables. Cuidemos juntos de lo que más quieres.
           </p>
-          <p>Please help them to find a new family, we will love them!</p>
           <div class="hero-buttons">
             <a href="#productos" class="animated-button btn-products">
               <span class="button-text">Productos</span>
@@ -155,7 +150,11 @@
             </a>
           </div>
         </div>
+
       </div>
+
+
+
 
     </section>
 
@@ -367,8 +366,13 @@
                 <button type="submit" class="animated-button btn-contact" id="submit-button">
                   <span class="button-text">Enviar</span>
                   <span class="button-effect"></span>
-                  <span class="spinner-border spinner-border-sm d-none" role="status" aria-hidden="true"></span>
-                  <span class="loading-text p-2 d-none">Enviando...</span>
+                  <span class="spinner-border spinner-border-sm d-none"
+                    style="z-index: 2; position: relative; transition: all 0.4s ease;" role="status"
+                    aria-hidden="true"></span>
+                  <span class="loading-text p-2 d-none"
+                    style="z-index: 2; position: relative; transition: all 0.4s ease;">
+                    Enviando...
+                  </span>
                 </button>
               </div>
               <div id="form-messages" class="mt-3 text-center"></div>
@@ -383,7 +387,7 @@
                 <h4>DIRECCIÓN</h4>
                 <p>
                   <i class="bi bi-geo-alt"></i>
-                  Los Puelches 1440, 3811586, Chillán, Ñuble
+                  Los Puelches 1440, Chillán, Ñuble
                 </p>
               </div>
 
@@ -399,7 +403,7 @@
                 <h4>TELEFONO</h4>
                 <p>
                   <i class="bi bi-telephone"></i>
-                  +56 9 2387 8557
+                  +56 9 23878557
                 </p>
               </div>
               <div class="contact-item reveal-up">
@@ -412,7 +416,12 @@
 
                 <p>
                   <i class="bi bi-clock"></i>
-                  SABADO - DOMINGO: 10:00 AM - 18:00 PM
+                  Sabado: 10:00 am - 18:00 pm
+                </p>
+
+                <p>
+                  <i class="bi bi-clock"></i>
+                  Domingo: 10:00 am - 17:00 pm
                 </p>
               </div>
 
@@ -472,7 +481,7 @@
             <img src="assets/images/logositiopetv2.png" alt="Perfil">
           </div>
           <div class="profile-info">
-            <h3>SITIO PET</h3>
+            <h3>SITIOPET</h3>
             <p><span class="outline-dot"></span>En Línea</p>
           </div>
         </div>
@@ -491,7 +500,7 @@
         <button type="submit" id="send-message" class="animated-button send-message">
           <span class="button-text">¡Escribenos un mensaje aquí!</span>
           <span class="button-icon">
-            <i class="bi bi-send"></i>
+            <i class="bi bi-arrow-return-right"></i>
           </span>
           <span class="button-effect"></span>
         </button>
@@ -512,7 +521,7 @@
   <div class="footer">
     <div class="container">
       <div class="footer-header">
-        <h5 class="logo-text">SITIO PET</h5>
+        <h5 class="logo-text">SITIOPET</h5>
         <p>Nutrición Premium y adopción para tus mascotas. ¡Cuidemos juntos de quienes más amas!</p>
       </div>
       <div class="footer-content">
@@ -582,7 +591,7 @@
             </a>
             <a href="#">
               <i class="bi bi-telephone-fill"></i>
-              +56 9 97008609
+              +56 9 23878557
             </a>
 
           </div>
