Corrigiendo y agregando los enlaces actualizados correspondientes...

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
   <div class="topbar reveal-left">
     <div class="container-topbar">
       <div class="topbar-section address">
-        <a href="#" class="topbar-link">
+        <a href="https://maps.google.com/?cid=13289977044722107350" target="_blank" class="topbar-link">
 
           <i class="bi bi-geo-alt-fill" style="color: #dc3545;"></i> <span>Los Puelches 1440, Chillán,
             Ñuble</span>
@@ -64,7 +64,7 @@
       </div>
 
       <div class="topbar-section phone">
-        <a href="#" class="topbar-link">
+        <a href="tel:+56923878557" class="topbar-link">
 
           <i class="bi bi-telephone-fill" style="color: #28a745;"></i> <span>+56 9 23878557</span>
 
@@ -75,9 +75,8 @@
 
         <a href="https://api.whatsapp.com/send?phone=56923878557&text=¡Hola! Quisiera obtener más información."
           target="_blank"><i class="bi bi-whatsapp"></i></a>
-        <a href="https://www.instagram.com/sitiopetcl?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw=="><i
-            class="bi bi-instagram"></i></a>
-        <a href="https://www.facebook.com/sitiopetcl/followers"><i class="bi bi-facebook"></i></a>
+        <a href="https://www.instagram.com/sitiopetcl/" target="_blank"><i class="bi bi-instagram"></i></a>
+        <a href="https://www.facebook.com/sitiopetcl/" target="_blank"><i class="bi bi-facebook"></i></a>
         <!-- <a href="#"><i class="bi bi-twitter"></i></a>
         <a href="#"><i class="bi bi-linkedin"></i></a>
         <a href="#"><i class="bi bi-pinterest"></i></a> -->
@@ -433,19 +432,19 @@
 
                   <li>
                     <a href="https://api.whatsapp.com/send?phone=56923878557&text=¡Hola! Quisiera obtener más información."
-                      target="_blank"">
+                      target="_blank">
                       <i class=" bi bi-whatsapp"></i>
                       <span class="tooltip">Whatsapp</span>
                     </a>
                   </li>
                   <li>
-                    <a href="https://www.instagram.com/sitiopetcl?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw=="">
+                    <a href="https://www.instagram.com/sitiopetcl/" target="_blank">
                       <i class=" bi bi-instagram"></i>
                       <span class="tooltip">Intagram</span>
                     </a>
                   </li>
                   <li>
-                    <a href="https://www.facebook.com/sitiopetcl/followers">
+                    <a href="https://www.facebook.com/sitiopetcl/" target="_blank">
                       <i class=" bi bi-facebook"></i>
                       <span class="tooltip">Facebook</span>
                     </a>
@@ -530,19 +529,20 @@
           <h5 class="title">Síguenos</h5>
           <div class="social-links">
             <li>
-              <a href="#">
+              <a href="https://api.whatsapp.com/send?phone=56923878557&text=¡Hola! Quisiera obtener más información."
+                target="_blank">
                 <i class="bi bi-whatsapp"></i>
               </a>
             </li>
 
             <li>
-              <a href="#">
+              <a href="https://www.instagram.com/sitiopetcl/" target="_blank">
                 <i class="bi bi-instagram"></i>
               </a>
             </li>
 
             <li>
-              <a href="#">
+              <a href="https://www.facebook.com/sitiopetcl/" target="_blank">
                 <i class="bi bi-facebook"></i>
               </a>
             </li>
@@ -555,15 +555,15 @@
           <h5 class="title">Contáctanos</h5>
 
           <div class="footer-container-link">
-            <a href="#">
+            <a href="https://maps.google.com/?cid=13289977044722107350" target="_blank">
               <i class="bi bi-geo-alt-fill"></i>
               Los Puelches 1440, Chillán, Ñuble
             </a>
-            <a href="#">
+            <a href="mailto:hola@sitiopet.cl?subject=Consulta desde el sitio web&body=Hola, SitioPet.">
               <i class="bi bi-envelope-fill"></i>
               hola@sitiopet.cl
             </a>
-            <a href="#">
+            <a href="tel:+56923878557">
               <i class="bi bi-telephone-fill"></i>
               +56 9 23878557
             </a>
@@ -574,18 +574,14 @@
         <div class="footer-col mb-2">
           <h5 class="title">Horario</h5>
           <div class="footer-container-link">
-            <a href="#">
-              <i class="bi bi-clock"></i>
-              Lunes - Viernes: 09:45 am - 19:30 pm
-            </a>
-            <a href="#">
-              <i class="bi bi-clock"></i>
-              Sabado: 10:00 am - 18:00 pm
-            </a>
-            <a href="#">
-              <i class="bi bi-clock"></i>
-              Domingo: 10:00 am - 17:00 pm
-            </a>
+
+            <i class="bi bi-clock"> Lunes - Viernes: 09:45 am - 19:30 pm</i>
+
+            <i class="bi bi-clock"> Sabado: 10:00 am - 18:00 pm</i>
+
+            <i class="bi bi-clock"> Domingo: 10:00 am - 17:00 pm</i>
+
+
           </div>
         </div>
       </div>
