Cuenta cliente agregada al EmailJS...

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Pagina Sitio Pet v2 </title>
-  <link rel="icon" href="assets/icons/logositiopetv2.png  " type="image/x-icon">
+  <link rel="icon" href="assets/icons/logositiopetmr.png" type="image/x-icon">
 
 
   <!-- Bootstrap Icons -->
@@ -56,7 +56,7 @@
 
           <i class="bi bi-clock-fill mask-linear-1"></i>
           <div class="slider-clock">
-            <span class="slider-item">Lunes - Viernes: 09:00 AM - 16:00 PM</span>
+            <span class="slider-item">Lunes - Viernes: 10:00 AM - 19:30 PM</span>
             <span class="slider-item">Sábado: 10:00 AM - 18:00 PM</span>
             <span class="slider-item">Domingo: 10:00 AM - 17:00 PM</span>
           </div>
@@ -92,7 +92,7 @@
     <div class="container">
       <div class="navbar">
         <div class="logo">
-          <img src="assets/icons/logositiopetv2.png" alt="Logo" class="logo-icon" />
+          <img src="assets/icons/logositiopetmr.png" alt="Logo" class="logo-icon" />
           <span class="logo-text">
             SITIO PET
           </span>
@@ -171,7 +171,7 @@
             </p>
 
             <div class="about-logo reveal-up">
-              <img src="assets/icons/logositiopetv2.png" alt="Logo SitioPet">
+              <img src="assets/icons/logositiopetmr.png" alt="Logo SitioPet">
             </div>
           </div>
 
@@ -248,7 +248,7 @@
         <div class="product-grid">
           <div class="product-card">
             <div class="product-image">
-              <img src="assets/images/productosuno.png" alt="Alimentos Secos" />
+              <img src="assets/images/alimentoseco.png" alt="Alimentos Secos" />
             </div>
             <div class="product-info">
               <h3>Alimentos Secos</h3>
@@ -266,7 +266,7 @@
           </div>
           <div class="product-card">
             <div class="product-image">
-              <img src="assets/images/productosdos.png" alt="Alimentos Secos" />
+              <img src="assets/images/alimentohumedo.png" alt="Alimentos Secos" />
             </div>
             <div class="product-info">
               <h3>Alimentos Húmedos</h3>
@@ -280,7 +280,7 @@
           </div>
           <div class="product-card">
             <div class="product-image">
-              <img src="assets/images/productostres.png" alt="Alimentos Secos" />
+              <img src="assets/images/accesorio.png" alt="Alimentos Secos" />
             </div>
             <div class="product-info">
               <h3>Accesorios</h3>
@@ -295,7 +295,7 @@
           </div>
           <div class="product-card">
             <div class="product-image">
-              <img src="assets/images/productosuno.png" alt="Alimentos Secos" />
+              <img src="assets/images/otros.png" alt="Alimentos Secos" />
             </div>
             <div class="product-info">
               <h3>Otros</h3>
@@ -385,7 +385,7 @@
               <div class="contact-item reveal-up">
                 <h4>DIRECCIÓN</h4>
                 <p>
-                  <i class="bi bi-geo-alt"></i>
+                  <i class="bi bi-geo-alt" style="margin-right: 0px;"></i>
                   Los Puelches 1440, Chillán, Ñuble
                 </p>
               </div>
@@ -410,17 +410,17 @@
 
                 <p>
                   <i class="bi bi-clock"></i>
-                  LUNES - VIERNES: 09:00 AM - 16:00 PM
+                  Lunes - Viernes: 10:00 AM - 19:30 PM
                 </p>
 
                 <p>
                   <i class="bi bi-clock"></i>
-                  Sabado: 10:00 am - 18:00 pm
+                  Sabado: 10:00 AM - 18:00 PM
                 </p>
 
                 <p>
                   <i class="bi bi-clock"></i>
-                  Domingo: 10:00 am - 17:00 pm
+                  Domingo: 10:00 AM - 17:00 PM
                 </p>
               </div>
 
@@ -477,7 +477,7 @@
       <div class="chatbox-header">
         <div class="profile">
           <div class="profile-image">
-            <img src="assets/images/logositiopetv2.png" alt="Perfil">
+            <img src="assets/icons/logositiopetmr.png" alt="Perfil">
           </div>
           <div class="profile-info">
             <h3>SITIOPET</h3>
@@ -512,7 +512,7 @@
   <div class="footer">
     <div class="container">
       <div class="footer-header">
-        <h5 class="logo-text">SITIOPET</h5>
+        <h5 class="logo-text">SITIO PET</h5>
         <p>Nutrición Premium y adopción para tus mascotas. ¡Cuidemos juntos de quienes más amas!</p>
       </div>
       <div class="footer-content">
@@ -575,7 +575,7 @@
           <h5 class="title">Horario</h5>
           <div class="footer-container-link">
 
-            <i class="bi bi-clock"> Lunes - Viernes: 09:45 am - 19:30 pm</i>
+            <i class="bi bi-clock"> Lunes - Viernes: 10:00 am - 19:30 pm</i>
 
             <i class="bi bi-clock"> Sabado: 10:00 am - 18:00 pm</i>
 
@@ -587,7 +587,7 @@
       </div>
       <hr class="footer-divider">
       <div class="footer-bottom">
-        <p>© 2025 SitioPet. Todos los derechos reservados.</p>
+        <p>© 2025 SITIO PET. Todos los derechos reservados.</p>
         <p class="footer-design">&lt;Diseñado por Felipe Navarrete&gt;</p>
       </div>
     </div>
