--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
         <div class="product-grid">
           <div class="product-card">
             <div class="product-image">
-              <img src="assets/images/alimentoseco.png" alt="Alimentos Secos" />
+              <img src="assets/images/alimentoseco.webp" alt="Alimentos Secos" />
             </div>
             <div class="product-info">
               <h3>Alimentos Secos</h3>
@@ -266,7 +266,7 @@
           </div>
           <div class="product-card">
             <div class="product-image">
-              <img src="assets/images/alimentohumedo.png" alt="Alimentos Secos" />
+              <img src="assets/images/alimentohumedo.webp" alt="Alimentos Secos" />
             </div>
             <div class="product-info">
               <h3>Alimentos Húmedos</h3>
@@ -280,7 +280,7 @@
           </div>
           <div class="product-card">
             <div class="product-image">
-              <img src="assets/images/accesorio.png" alt="Alimentos Secos" />
+              <img src="assets/images/accesorio.webp" alt="Alimentos Secos" />
             </div>
             <div class="product-info">
               <h3>Accesorios</h3>
@@ -295,7 +295,7 @@
           </div>
           <div class="product-card">
             <div class="product-image">
-              <img src="assets/images/otros.png" alt="Alimentos Secos" />
+              <img src="assets/images/otros.webp" alt="Alimentos Secos" />
             </div>
             <div class="product-info">
               <h3>Otros</h3>
